--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Weldon Kiprop <weldonkiprop1@gmail.com>
+Godfrey Dekew <dekewgodfrey@gmail.com>
